@@ -5,6 +5,10 @@ This is a list of major changes in SDL's version history.
 2.0.18:
 ---------------------------------------------------------------------------
 
+Linux:
+* Added the hint SDL_HINT_LINUX_JOYSTICK_CLASSIC to control whether /dev/input/js* or /dev/input/event* are used as joystick devices
+* Added the hint SDL_HINT_JOYSTICK_DEVICE to allow the user to specify devices that will be opened in addition to the normal joystick detection
+
 Android:
 * Added support for audio output and capture using AAudio on Android 8.1 and newer
 
